carousel products created

--- a/estrela-america-v2/src/app/assets/css/globals.css
+++ b/estrela-america-v2/src/app/assets/css/globals.css
@@ -74,3 +74,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.previous > svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.next > svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
