--- a/estrela-america-v2/src/app/assets/css/globals.css
+++ b/estrela-america-v2/src/app/assets/css/globals.css
@@ -85,6 +85,13 @@
   height: 1.5rem;
 }
 
+#hero {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 @media (min-width: 768px) {
   .previous > svg {
     width: 1.5rem;
